--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
   <title>Productivity Tracker</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="lib/chart.umd.min.js"></script>
   <style>
     body {
       width: 400px;
