Added Site Breakdown

--- a/popup.html
+++ b/popup.html
@@ -633,20 +633,16 @@
         <div class="sites-list" id="sitesList">
           <!-- Hover instruction will be added here -->
         </div>
+        <div class="sites-list" id="sitesListDropdown">
+          <!-- Full dropdown site breakdown appears here -->
+        </div>
       </div>
 
       <!-- Action Buttons -->
       <div class="actions">
-        <button class="action-btn" id="viewDetailsBtn">
-          <span>👁️</span>
-          <span>Details</span>
-        </button>
         <button class="action-btn" id="clearDataBtn">
           <span>🗑️</span>
           <span>Clear</span>
-        </button>
-        <button class="action-btn settings" id="settingsBtn">
-          <span>⚙️</span>
         </button>
       </div>
     </div>
